
New updates are grouped by person (committer/merger), at the top of the file.
All entries are dated according to merging into the code in dev branch. THIS MEANS THE CODE MAY
NOT BE PRESENT IN THE STABLE BRANCH
For details of when a commit makes it into the stable branch see the ReleaseNotes file.

2016-06-23 DariusIII
	Fix: Headermenu on Default and themes that use it as their base (TV was linked to series not browse all TV releases).
2016-06-23 ruhllatio
	Chg: Make fixReleaseNames predbft deterministic to prevent useless threads
2016-06-23 DariusIII
	Upd: composer.lock with version 1.0.9 of barracudanetworks/forkdaemon-php (adds unlimited child run support)
2016-06-22 ruhllatio
	Fix: New gFRN bad offset typo for NFO, Files
2016-06-21 niel
	Fix: Initial default theme not set to Alpha, because of lower case first letter.
	Chg: Relaxed minimum PHP requirement to 5.6.10, so users on distros from around 14.04 have less problems.
2016-06-18 ruhllatio
	Mrg: Add new Gentele theme. #2156 @DariusIII
	Mrg: Fixed SQL injection in Movie.php #2180
2016-06-13 DariusIII
	Upd: scrutinizer config
2016-06-12 ruhllatio
	Fix: Series View does quality selection missing value. #2170
2016-06-12 bart39
	Fix: category_id not changed to categories_id for category regexes. Fixes issue #2171.
2016-06-10 ruhllatio
	Mrg: Dev fixrelsinglerun #2169 (Note: Restart Tmux)
2016-06-09 ruhllatio
	Fix: AniDB client not respecting update times
2016-06-08 ruhllatio
	Fix: A few errors in Categorize class (duplicate XxxSD call)
	Fix: Issues with categories TSV not being updated after numerous change commits
	Fix: Sneaky category_id not changed to categories_id in recategorize.php
2016-06-08 DariusIII
	Chg: Change qtip2 version used in Omicron theme
	Fix: Fix check all icon behaviour in Omicron theme
	Chg: Switch Omicron to iCheck checkbox style and new Pnotify style.
	Upd: Fix no background images in Charisma/Omicron themes, change type of iCheck used in Omicron.
2016-06-08 niel