@@ -8,6 +8,8 @@ All entries are dated according to merging into the code in dev branch. THIS MEA
 NOT BE PRESENT IN THE STABLE BRANCH
 For details of when a commit makes it into the stable branch see the ReleaseNotes file.
 
+2016-06-24 DariusIII
+	Chg: Move child forking settings inside if else loop
 2016-06-23 DariusIII
 	Fix: Headermenu on Default and themes that use it as their base (TV was linked to series not browse all TV releases).
 2016-06-23 ruhllatio
